[gd_scene load_steps=30 format=3 uid="uid://8rlt50bjqrnr"]

[ext_resource type="Script" path="res://actors/frogy/frogy.gd" id="1_2fmqe"]
[ext_resource type="Texture2D" uid="uid://bgyn4hloj7bdw" path="res://actors/frogy/frogy.png" id="1_ciw1k"]
[ext_resource type="Script" path="res://addons/trail_2d/trail_2d.gd" id="2_3noaw"]
[ext_resource type="PackedScene" path="res://actors/components/movement_manager.tscn" id="3_7cwmp"]
[ext_resource type="Script" path="res://actors/components/bouncing_manager.gd" id="4_hwckh"]
[ext_resource type="Script" path="res://actors/frogy/death_manager.gd" id="5_r5ak0"]
[ext_resource type="Script" path="res://actors/frogy/bricks_impacter.gd" id="6_4qjhy"]
[ext_resource type="Script" path="res://actors/frogy/bounce_animation_effect.gd" id="7_3lf7g"]
[ext_resource type="Script" path="res://test/rotate_node_effect.gd" id="8_58dwt"]
[ext_resource type="Script" path="res://actors/frogy/scale_by_velocity.gd" id="9_2dlar"]
[ext_resource type="PackedScene" uid="uid://6q5tp048wk3s" path="res://effects/bounce_particles_effect.tscn" id="11_jprwf"]
[ext_resource type="PackedScene" uid="uid://bb66i7ypf3x22" path="res://effects/hit_stop_effect.tscn" id="12_8wh8b"]
[ext_resource type="PackedScene" uid="uid://bp5pino13h6nm" path="res://effects/death_effect.tscn" id="14_b8v4m"]
[ext_resource type="PackedScene" uid="uid://eux0priaj10i" path="res://effects/appear_effect.tscn" id="15_ip5qy"]
[ext_resource type="Script" path="res://actors/frogy/decceleration_effect.gd" id="16_xkcyd"]
[ext_resource type="PackedScene" uid="uid://b7mau6sauoypc" path="res://effects/speed_smoke_effect.tscn" id="17_q5jot"]
[ext_resource type="PackedScene" uid="uid://c817v2wc4m8jh" path="res://effects/sound_effect.tscn" id="18_t2aqb"]
[ext_resource type="AudioStream" uid="uid://b5ic5vd3h2ebj" path="res://assets/sounds/frogy_bouncing.wav" id="19_j8iuc"]
[ext_resource type="AudioStream" uid="uid://d2apij8wcjem7" path="res://assets/sounds/frogy_speed_up.wav" id="20_me2fj"]
[ext_resource type="AudioStream" uid="uid://hcwb4y1oykqs" path="res://assets/sounds/water_splash.wav" id="21_avugy"]
[ext_resource type="PackedScene" uid="uid://cm5yp03y3eyox" path="res://actors/components/collision_debugger.tscn" id="21_l6jnr"]
[ext_resource type="PackedScene" uid="uid://b1bk3qsgbv20l" path="res://effects/device_vibration_effect.tscn" id="22_5876s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a3lg5"]
radius = 57.0

[sub_resource type="Animation" id="Animation_vqpsu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ox13s"]
resource_name = "bounce"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.2),
"transitions": PackedFloat32Array(-2, -2, -2, -2),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.6, 1.4), Vector2(1.2, 0.8), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_vglx3"]
resource_name = "die"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.325, 0.55, 0.775, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 0.8), Vector2(0.8, 1.2), Vector2(1.2, 0.8), Vector2(0.8, 1.2), Vector2(1.2, 0.8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.03, 0.05, 0.07, 0.09, 0.11, 0.13, 0.15, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, 0), Vector2(-10, 0), Vector2(10, 0), Vector2(-10, 0), Vector2(10, 0), Vector2(-10, 0), Vector2(0, 0), Vector2(0, 200)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g2rdt"]
_data = {
"RESET": SubResource("Animation_vqpsu"),
"bounce": SubResource("Animation_ox13s"),
"die": SubResource("Animation_vglx3")
}

[sub_resource type="Curve" id="Curve_wc1tw"]
_data = [Vector2(0, 1), 0.0, 0.010209, 0, 0, Vector2(0.550447, 0.78397), -0.37248, -0.37248, 0, 0, Vector2(1, 0), -3.05371, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_217si"]
offsets = PackedFloat32Array(0, 0.603636, 1)
colors = PackedColorArray(0.490196, 0.670588, 0.65098, 1, 0.490196, 0.670588, 0.65098, 1, 0.490196, 0.670588, 0.65098, 0)

[node name="Frogy" type="CharacterBody2D" groups=["frogy"]]
collision_layer = 2
collision_mask = 29
script = ExtResource("1_2fmqe")

[node name="Visuals" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_ciw1k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_a3lg5")

[node name="MovementManager" parent="." node_paths=PackedStringArray("character") instance=ExtResource("3_7cwmp")]
max_speed = 2500.0
speed = 1000.0
acceleration = 0
infinite_acceleration = true
character = NodePath("..")
collision_mode = "Collide"

[node name="BouncingManager" type="Node" parent="." node_paths=PackedStringArray("character", "movement_manager")]
script = ExtResource("4_hwckh")
character = NodePath("..")
movement_manager = NodePath("../MovementManager")
time_between_bounces_with_same_node = 0.2

[node name="DeathManager" type="Node" parent="." node_paths=PackedStringArray("movement_manager", "collision_shape_2d", "animation_player")]
script = ExtResource("5_r5ak0")
movement_manager = NodePath("../MovementManager")
collision_shape_2d = NodePath("../CollisionShape2D")
animation_player = NodePath("../AnimationPlayer")

[node name="BricksImpacter" type="Node" parent="."]
script = ExtResource("6_4qjhy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g2rdt")
}

[node name="Effects" type="Node2D" parent="."]

[node name="Trail2D" type="Line2D" parent="Effects"]
z_index = -1
width = 110.0
width_curve = SubResource("Curve_wc1tw")
gradient = SubResource("Gradient_217si")
texture_mode = 2
script = ExtResource("2_3noaw")
length = 8

[node name="BounceAnimationEffect" type="Node" parent="Effects" node_paths=PackedStringArray("animation_player", "visuals")]
script = ExtResource("7_3lf7g")
animation_player = NodePath("../../AnimationPlayer")
visuals = NodePath("../../Visuals")

[node name="RotateNodeEffect" type="Node" parent="Effects" node_paths=PackedStringArray("node")]
script = ExtResource("8_58dwt")
node = NodePath("../../Visuals/Sprite2D")
angle_offest = 90.0

[node name="ScaleByVelocity" type="Node" parent="Effects" node_paths=PackedStringArray("movement_manager", "node")]
script = ExtResource("9_2dlar")
movement_manager = NodePath("../../MovementManager")
node = NodePath("../../Visuals/Sprite2D")

[node name="BounceParticlesEffect" parent="Effects" instance=ExtResource("11_jprwf")]

[node name="HitStopEffect" parent="Effects" node_paths=PackedStringArray("node", "animation_player") instance=ExtResource("12_8wh8b")]
node = NodePath("../../MovementManager")
animation_player = NodePath("../../AnimationPlayer")

[node name="HitStopEffectBig" parent="Effects" node_paths=PackedStringArray("node", "animation_player") instance=ExtResource("12_8wh8b")]
node = NodePath("../../MovementManager")
animation_player = NodePath("../../AnimationPlayer")
time = 0.2

[node name="DeathEffect" parent="Effects" instance=ExtResource("14_b8v4m")]
z_index = 10

[node name="AppearEffect" parent="Effects" node_paths=PackedStringArray("node_to_hide_1", "node_to_hide_2") instance=ExtResource("15_ip5qy")]
node_to_hide_1 = NodePath("../../Visuals")
node_to_hide_2 = NodePath("../Trail2D")

[node name="DeccelerationEffect" type="Node" parent="Effects" node_paths=PackedStringArray("movement_manager")]
script = ExtResource("16_xkcyd")
movement_manager = NodePath("../../MovementManager")

[node name="SpeedSmokeEffect" parent="Effects" instance=ExtResource("17_q5jot")]
z_index = -1

[node name="CocoBounceSoundEffect" parent="Effects" instance=ExtResource("18_t2aqb")]
random_pitch = true
samples = Array[AudioStream]([ExtResource("19_j8iuc")])

[node name="SpeedUpSoundEffect" parent="Effects" instance=ExtResource("18_t2aqb")]
stream = ExtResource("20_me2fj")
loop = true

[node name="DeadSoundEffect" parent="Effects" instance=ExtResource("18_t2aqb")]
stream = ExtResource("21_avugy")
volume_db = -8.0

[node name="CollisionDebugger" parent="Effects" instance=ExtResource("21_l6jnr")]

[node name="DeviceVibrationEffect" parent="Effects" instance=ExtResource("22_5876s")]

[connection signal="boosted" from="." to="Effects/HitStopEffectBig" method="perform"]
[connection signal="ready" from="." to="Effects/AppearEffect" method="perform"]
[connection signal="collision_found" from="MovementManager" to="BouncingManager" method="on_collision_found"]
[connection signal="collision_found" from="MovementManager" to="DeathManager" method="on_collision_found"]
[connection signal="direction_changed" from="MovementManager" to="Effects/RotateNodeEffect" method="on_direction_changed"]
[connection signal="direction_changed" from="MovementManager" to="Effects/SpeedSmokeEffect" method="on_direction_changed"]
[connection signal="speed_changed" from="MovementManager" to="Effects/SpeedSmokeEffect" method="on_speed_changed"]
[connection signal="bounced" from="BouncingManager" to="BricksImpacter" method="on_collision_found"]
[connection signal="bounced" from="BouncingManager" to="Effects/BounceAnimationEffect" method="bounce"]
[connection signal="bounced" from="BouncingManager" to="Effects/BounceParticlesEffect" method="perform"]
[connection signal="bounced" from="BouncingManager" to="Effects/CollisionDebugger" method="on_collision_found"]
[connection signal="bounced_on_coco" from="BouncingManager" to="Effects/CocoBounceSoundEffect" method="perform"]
[connection signal="bounced_on_other" from="BouncingManager" to="Effects/CocoBounceSoundEffect" method="perform"]
[connection signal="death_finished" from="DeathManager" to="Effects/AppearEffect" method="perform"]
[connection signal="death_started" from="DeathManager" to="Effects/DeathEffect" method="perform"]
[connection signal="death_started" from="DeathManager" to="Effects/DeadSoundEffect" method="perform"]
[connection signal="death_started" from="DeathManager" to="Effects/DeviceVibrationEffect" method="perform"]
[connection signal="collision_found" from="BricksImpacter" to="Effects/HitStopEffect" method="perform"]
[connection signal="emit_finished" from="Effects/SpeedSmokeEffect" to="Effects/SpeedUpSoundEffect" method="finish"]
[connection signal="emit_started" from="Effects/SpeedSmokeEffect" to="Effects/SpeedUpSoundEffect" method="perform"]
